--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^5.0.2",
-    "compressing": "^1.5.1"
+    "compressing": "^1.5.1",
+    "readline": "^1.3.0"
   }
 }
