--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "archiver": "^5.0.2",
+    "body-parser": "^1.19.0",
     "compressing": "^1.5.1",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "readline": "^1.3.0"
   }
 }
